--- a/index.html
+++ b/index.html
@@ -8,18 +8,25 @@
     <script src="library.js"></script>
 </head>
 <body>
+    <header>
+        <h1>Library</h1>
+    </header>
     <div class="books-list">
 
     </div>
+    <button class="add-book">Add Book</button>
     <form class="book-form">
-        <p class="error-message"></p>
+        <div class="error-message"></div>
         <input id="book-title" type="text" placeholder="Title" required minlength="3" maxlength="100">
         <input id="book-author" type="text" placeholder="Author" required minlength="3" maxlength="100">
-        <label for="book-completed">Completed</label>
-        <input id="book-completed" type="checkbox">
-        <button id="submit-book" type="submit">Add Book</button>
-        <button id="cancel-book-form" type="button">Cancel</button>
+        <div class="completed-section">
+            <label for="book-completed">Completed</label>
+            <input id="book-completed" type="checkbox">
+        </div>
+        <div class="card-buttons">
+            <button id="submit-book" type="submit">Add Book</button>
+            <button id="cancel-book-form" type="button">Cancel</button>
+        </div>
     </form>
-    <button class="add-book">Add Book</button>
 </body>
 </html>
